--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-communications": "^2.2.1",
+    "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
