--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
@@ -20,7 +20,7 @@
     "react-native-communications": "^2.2.1",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-modal": "^13.0.1",
-    "react-native-safe-area-context": "^4.6.3"
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
